my-gateway-external-service/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name:  my-https
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE  
        credentialName: "https-credential"
      hosts:
        - "my-vue-istio-system.apps.cluster-95cf7.95cf7.sandbox882.opentlc.com"
        - "my-hello-istio-system.apps.cluster-95cf7.95cf7.sandbox882.opentlc.com"
        - "my-ext-hello-istio-system.apps.cluster-95cf7.95cf7.sandbox882.opentlc.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: my-ext-hello-service-entry
spec:
  hosts:
  - "my-ext-hello-service.my-ext-hello.svc.cluster.local"
  location: MESH_EXTERNAL
  ports:
  - number: 8081
    name: http
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-ext-hello-service
spec:
  hosts:
    - "my-ext-hello-istio-system.apps.cluster-95cf7.95cf7.sandbox882.opentlc.com"
  gateways:
    -  my-gateway/my-https
  http:
    - route:
        - destination:
            host: "my-ext-hello-service.my-ext-hello.svc.cluster.local"
            port:
              number: 8081
